feat: java jvm oom demo